--- a/.env.development.example
+++ b/.env.development.example
@@ -1,3 +1,3 @@
 AGILITY_GUID=''
-AGILITY_LIVE_API_KEY=''
-AGILITY_API_KEY='' # use your Preview API key. starts with `defaultpreview`.
+AGILITY_API_KEY='' # use your Preview API key; it starts with `defaultpreview`
+AGILITY_API_ISPREVIEW=true
