--- a/.env.production.example
+++ b/.env.production.example
@@ -1,3 +1,3 @@
 AGILITY_GUID=''
-AGILITY_LIVE_API_KEY=''
-AGILITY_API_KEY='' # use your Live API key. starts with `defaultlive`.
+AGILITY_API_KEY='' # use your Live API key; it starts with `defaultlive`
+AGILITY_API_ISPREVIEW=false
